# syntax_study

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
syntax_study/: analysis.py  syntaxes.py
tests/: test_syntax.py
