[project]
name = "rust-syntax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.9.2",
    "pygithub>=2.5.0",
    "rex",
]

[tool.uv.sources]
rex = { git = "https://github.com/Microwave-WYB/rex.git" }

[tool.pyright]
venvPath = "."
venv = ".venv"
